--- a/overleaf.tex
+++ b/overleaf.tex
@@ -46,17 +46,17 @@ The source code is available on~\href{https://github.com/niccolozanotti/climate-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%% OUR VERSION %%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{chapters_overleaf/chapter-intro}
-\input{chapters_overleaf/chapter-fund-eqs-processes}
-\input{chapters_overleaf/chapter-numerical-methods}
-\input{chapters_overleaf/chapter-climate-models}
-\input{chapters_overleaf/chapter-ocean-models}
-\input{chapters_overleaf/chapter-exploring-var}
-\input{chapters_overleaf/chapter-sst-forcing}
-\input{chapters_overleaf/chapter-earth-system-models}
-\input{chapters_overleaf/chapter-theory-simm-circ}
+\input{chapters/intro}
+\input{chapters/fund-eqs-processes}
+\input{chapters/numerical-methods}
+\input{chapters/climate-models}
+\input{chapters/ocean-models}
+\input{chapters/exploring-var}
+\input{chapters/sst-forcing}
+\input{chapters/earth-system-models}
+\input{chapters/theory-simm-circ}
 
-\input{chapters_overleaf/appendixA}
+\input{chapters/appendixA}
 
 
 
