--- a/main.tex
+++ b/main.tex
@@ -45,47 +45,18 @@ The source code is available on~\href{https://github.com/niccolozanotti/climate-
 %%%%%%%%%%%%%%%%%%%% CONTENTS %%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\input{chapters/chapter-intro}
-\input{chapters/chapter-fund-eqs-processes}
-%\input{chapters/chapter-numerical-methods}
-%\input{chapters/chapter-climate-models}
-%\input{chapters/chapter-ocean-models}
-%\input{chapters/chapter-exploring-var}
-%\input{chapters/chapter-sst-forcing}
-%\input{chapters/chapter-earth-system-models}
-%\input{chapters/chapter-theory-simm-circ}
+\input{chapters/intro}
+\input{chapters/fund-eqs-processes}
+%\input{chapters/numerical-methods}
+%\input{chapters/climate_models}
+%\input{chapters/ocean-models}
+%\input{chapters/exploring-variability}
+%\input{chapters/sst-forcings}
+%\input{chapters/earth-system-models}
+%\input{chapters/theory-simm-circ}
 %
-\input{chapters/appendixA}
+\input{chapters/appendix}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%% GLOBAL DYNAMICS CONTENTS %%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\input{global-dynamics/introduction}
-%\input{global-dynamics/circulation-theorems-ertel-potential-vorticity}
-%\input{global-dynamics/homogeneous-flows}
-%\input{global-dynamics/quasi-geostrophic-potential-vorticity}
-%\input{global-dynamics/vorticity-equation}
-%\input{global-dynamics/flows-over-topography}
-%\input{global-dynamics/waves-oscillations}
-%\input{global-dynamics/energetics}
-%\input{global-dynamics/atmospheric-general-circulation}
-%\input{global-dynamics/energy-balance}
-%\input{global-dynamics/oceanic-general-circulation}
-%\input{global-dynamics/heat-momentum-sources}
-%\input{global-dynamics/theory-symmetric-circulation}
-%\input{global-dynamics/tropical-waves}
-%\input{global-dynamics/appendix}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%% NUMERICAL METHODS CONTENTS %%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-% \input{NM/foreword}
-% \input{NM/introduction}
-% \input{NM/time-differencing-scheme}dd
-% \input{NM/advection-equation}
-% \input{NM/gravity-wave-equations}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
