--- a/titlepage.tex
+++ b/titlepage.tex
@@ -43,7 +43,7 @@
 	\begin{minipage}[t]{0.48\textwidth}
 		\raggedleft
 		\textbf{Author} \\
-		Students of the Course \\
+		beautiful babies \\
 
 	\end{minipage}
 
