--- a/frontpage.tex
+++ b/frontpage.tex
@@ -7,7 +7,7 @@
 \RelatoreLabel{Prof.}
 \CandidatoLabel{Student}
 
-\Candidato{Students of SOC} 
+\Candidato{beautiful babies} 
 \Matricola{00000}
 \DataEsame{\today}
 \Logo{setup/unibo-red.png}
