--- a/main.tex
+++ b/main.tex
@@ -47,14 +47,14 @@ The source code is available on~\href{https://github.com/niccolozanotti/climate-
 
 \input{chapters/intro}
 \input{chapters/fund-eqs-processes}
-%\input{chapters/numerical-methods}
-%\input{chapters/climate_models}
-%\input{chapters/ocean-models}
-%\input{chapters/exploring-variability}
-%\input{chapters/sst-forcings}
-%\input{chapters/earth-system-models}
-%\input{chapters/theory-simm-circ}
-%
+\input{chapters/numerical-methods}
+\input{chapters/climate_models}
+\input{chapters/ocean-models}
+\input{chapters/exploring-variability}
+\input{chapters/sst-forcings}
+\input{chapters/earth-system-models}
+\input{chapters/theory-simm-circ}
+
 \input{chapters/appendix}
 
 
