--- a/overleaf.tex
+++ b/overleaf.tex
@@ -49,14 +49,14 @@ The source code is available on~\href{https://github.com/niccolozanotti/climate-
 \input{chapters/intro}
 \input{chapters/fund-eqs-processes}
 \input{chapters/numerical-methods}
-\input{chapters/climate-models}
+\input{chapters/climate_models}
 \input{chapters/ocean-models}
-\input{chapters/exploring-var}
-\input{chapters/sst-forcing}
+\input{chapters/exploring-variability}
+\input{chapters/sst-forcings}
 \input{chapters/earth-system-models}
 \input{chapters/theory-simm-circ}
 
-\input{chapters/appendixA}
+\input{chapters/appendix}
 
 
 
