--- a/setup/commands.sty
+++ b/setup/commands.sty
@@ -53,29 +53,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%% SOURCE FILES %%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\chapterOneIntro}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-intro.tex}{chapter-intro.tex}}
-\newcommand{\chapterOneCirculation}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-circulation.tex}{chapter-circulation.tex}}
-\newcommand{\chapterTwoEqsProc}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-fund-eqs-processes.tex}{chapter-fund-eqs-processes.tex}}
-\newcommand{\chapterThreeNumMeth}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-numerical-methods.tex}{chapter-numerical-methods.tex}}
-\newcommand{\chapterFourClimMod}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-climate-models.tex}{chapter-climate-models.tex}}
-\newcommand{\chapterFourOceanMod}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-ocean-models.tex}{chapter-ocean-models.tex}}
-\newcommand{\chapterFiveExploringSST}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-exploring-var.tex}{chapter-exploring-var.tex}}
-\newcommand{\chapterSixSSTForcing}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-sst-forcing.tex}{chapter-sst-forcing.tex}}
-\newcommand{\chapterSevenEarthMod}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-earth-system-models.tex}{chapter-earth-system-models.tex}}
-\newcommand{\chapterEightSymmCirc}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/chapter-theory-simm-circ.tex}{chapter-theory-simm-circ.tex}}
-\newcommand{\chapterAppendixA}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters/appendixA.tex}{appendixA.tex}}
+\newcommand{\chapterOneIntro}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/intro.tex}{intro.tex}}
+\newcommand{\chapterTwoEqsProc}{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/fund-eqs-processes.tex}{fund-eqs-processes.tex}}
+\newcommand{\chapterThreeNumMeth}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/numerical-methods.tex}{numerical-methods.tex}}
+\newcommand{\chapterFourClimMod}{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/climate_models.tex}{climate_models.tex}}
+\newcommand{\chapterFourOceanMod}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/ocean-models.tex}{ocean-models.tex}}
+\newcommand{\chapterFiveExploringSST}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/exploring-variability.tex}{exploring-variability.tex}}
+\newcommand{\chapterSixSSTForcing}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/sst-forcings.tex}{sst-forcings.tex}}
+\newcommand{\chapterSevenEarthMod}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/earth-system-models}{earth-system-models.tex}}
+\newcommand{\chapterEightSymmCirc}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/theory-simm-circ.tex}{theory-simm-circ.tex}}
+\newcommand{\chapterAppendix}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/appendix.tex}{appendix.tex}}
 
-\newcommand{\chapterOneIntroOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-intro.tex}{chapter-intro.tex}}
-\newcommand{\chapterOneCirculationOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-circulation.tex}{chapter-circulation.tex}}
-\newcommand{\chapterTwoEqsProcOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-fund-eqs-processes.tex}{chapter-fund-eqs-processes.tex}}
-\newcommand{\chapterThreeNumMethOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-numerical-methods.tex}{chapter-numerical-methods.tex}}
-\newcommand{\chapterFourClimModOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-climate-models.tex}{chapter-climate-models.tex}}
-\newcommand{\chapterFourOceanModOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-ocean-models.tex}{chapter-ocean-models.tex}}
-\newcommand{\chapterFiveExploringSSTOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-exploring-var.tex}{chapter-exploring-var.tex}}
-\newcommand{\chapterSixSSTForcingOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-sst-forcing.tex}{chapter-sst-forcing.tex}}
-\newcommand{\chapterSevenEarthModOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-earth-system-models.tex}{chapter-earth-system-models.tex}}
-\newcommand{\chapterEightSymmCircOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/chapter-theory-simm-circ.tex}{chapter-theory-simm-circ.tex}}
-\newcommand{\chapterAppendixAOverleaf}{\href{https://github.com/niccolozanotti/climate-modeling/blob/main/chapters_overleaf/appendixA.tex}{appendixA.tex}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%% MISCELLANEA %%%%%%%%%%%%%%%%%%%
