--- a/setup/commands.sty
+++ b/setup/commands.sty
@@ -54,7 +54,7 @@
 %%%%%%%%%%%%%%%%%% SOURCE FILES %%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\chapterOneIntro}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/intro.tex}{intro.tex}}
-\newcommand{\chapterTwoEqsProc}{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/fund-eqs-processes.tex}{fund-eqs-processes.tex}}
+\newcommand{\chapterTwoEqsProc}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/fund-eqs-processes.tex}{fund-eqs-processes.tex}}
 \newcommand{\chapterThreeNumMeth}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/numerical-methods.tex}{numerical-methods.tex}}
 \newcommand{\chapterFourClimMod}{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/climate_models.tex}{climate_models.tex}}
 \newcommand{\chapterFourOceanMod}{\href{https://github.com/cristinalbini/climate_sistem_modeling/blob/main/chapters/ocean-models.tex}{ocean-models.tex}}
