--- a/titlepage.tex
+++ b/titlepage.tex
@@ -53,8 +53,7 @@
 	% Footer Section
 	\begin{center}
 		Last updated:
-		\today \\
-		\href{https://niccolozanotti.github.io/climate-modeling/notes.pdf}{Latest version}
+		\today 
 	\end{center}
 
 	\restoregeometry
